more space if we can afford it

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="wrapper">
     <header>
       Der Freiraum Petersburg ist der Zusammenschluss aus Freiraum Agentur
-      und Kulturverein Petersburg e.V.
+      und Kulturverein Petersburg
     </header>
 
     <div>
@@ -42,7 +42,7 @@
             <div class="tile__content">
               <h2>Kulturverein Petersburg</h2>
               <p>
-                Der Kulturverein Petersburg e.V. ist der Träger des K.A.F.F.
+                Der Kulturverein Petersburg e.V. ist Träger des K.A.F.F.
               </p>
               <a class="button" href="https://kulturverein-petersburg.de">
                 Webseite
